[build-system]
requires = ["flit_core >=3.11,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "nonos"
version = "0.18.0"
description = "A tool to analyze results from idefix/pluto simulations (for protoplanetary disks more specifically)"
authors = [
    { name = "G. Wafflard-Fernandez" },
    { name = "C.M.T. Robert" },
]
license = "GPL-3.0-only"
license-files = ["LICENSE"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Typing :: Typed",
]
requires-python = ">=3.10"

dependencies = [
    "inifix>=3.0.0",
    "loguru>=0.5.3",
    "matplotlib>=3.5.0",
    "numpy>=1.21.2",
    "packaging>=20.0",
    "termcolor>=2.1.0",
    "tqdm>=4.64.1",
    "typing_extensions >= 4.4.0 ; python_version < '3.12'",
]

[project.optional-dependencies]
all = [
    "cblind>=2.3.0",
    "cmocean>=3.0.3",
    "cmyt>=2.0.0",
    "lick>=0.5.1",
    "scipy>=1.7.2",
]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.scripts]
nonos = "nonos.main:main"

[project.urls]
Homepage = "https://github.com/volodia99/nonos"

[dependency-groups]
test = [
    "cogapp>=3.3.0",
    "pytest-mpl>=0.15.1",
    "pytest>=8.0.0",

]
covcheck = [
    {include-group = "test"},
    "coverage[toml]>=7.4.4 ; python_full_version < '3.11'",
    "coverage>=7.4.4 ; python_full_version >= '3.11'",
    "numexpr>=2.10.2",
]
typecheck = [
    "matplotlib>=3.8.0",
    "mypy>=1.13.0",
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-include-markdown-plugin>=7.1.2",
    "mkdocs-material>=9.5.47",
    "mkdocstrings[python]>=0.27.0",
]

[tool.ruff.lint]
exclude = [
    "*__init__.py",
    "from_simulation.py", # deprecated module
]
ignore = [
    "E501",
    "PTH123", # `open()` should be replaced by `Path.open()`
]
select = [
    "E",
    "F",
    "W",
    "ARG", # flake8-unused-arguments
    "C4",  # flake8-comprehensions
    "PTH", # flake8-use-pathlib
    "B",   # flake8-bugbear
    "YTT", # flake8-2020
    "I",   # isort
    "UP",  # pyupgrade
]

[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = ["nonos"]

[tool.pytest.ini_options]
addopts = "-ra"
filterwarnings = [
    "error",
    'ignore:datetime\.datetime\.utcfromtimestamp\(\) is deprecated:DeprecationWarning', # https://github.com/dateutil/dateutil/pull/1285
    'ignore:The py23 module has been deprecated and will be removed in a future release:DeprecationWarning',
    "ignore:Passing 'N' to ListedColormap is deprecated since:DeprecationWarning", # https://github.com/matplotlib/cmocean/pull/114
]

[tool.mypy]
python_version = "3.10"
show_error_codes = true
warn_unused_configs = true
warn_unused_ignores = true
warn_unreachable = true
show_error_context = true
disallow_untyped_defs = false  # TODO: add missing annotations and switch this option to true
ignore_missing_imports = true

[tool.coverage.run]
source = [
    "src",
    "tests"
]
omit = [
    "src/nonos/__main__.py",
    "src/nonos/_backports.py",
    "src/nonos/api/from_simulation.py", # deprecated module
]

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
    # a more strict default pragma
    "\\# pragma: no cover\\b",

    # allow defensive code
    "^\\s*raise NotImplementedError\\b",
    "^\\s*assert_never\\b",

    ": \\.\\.\\.(\\s*#.*)?$",
    "^ +\\.\\.\\.$",
    "-> ['\"]?NoReturn['\"]?:",
]
