[metadata]
name = nonos
version = 0.6.0
description = A tool to analyze results from idefix/pluto simulations (for protoplanetary disks more specifically)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/volodia99/nonos
author = G. Wafflard-Fernandez & C. Robert
license = GPL-3.0
license_file = LICENSE
classifiers =
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages = find:
install_requires =
    cblind>=2.2.2
    inifix>=1.0.0
    licplot>=1.0.5
    matplotlib>=3.2.1
    numpy>=1.18.5
    pytomlpp>=1.0.1
    rich>=10.13.0
    scikit-image>=0.18.1
    scipy>=1.6.1
python_requires = >=3.8

[options.entry_points]
console_scripts =
    nonos = nonos.main:main

[options.extras_require]
dev =
    memory-profiler
    pytest>=6.1

[options.package_data]
nonos =
    logo.txt
    nonos.mplstyle

[flake8]
exclude = *__init__.py
ignore = E203, E501, W503, E741

[mypy]
python_version = 3.8
