[metadata]
name = nonos
version = 0.7.0
description = A tool to analyze results from idefix/pluto simulations (for protoplanetary disks more specifically)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/volodia99/nonos
author = G. Wafflard-Fernandez & C. Robert
license = GPL-3.0
license_file = LICENSE
classifiers =
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Typing :: Typed

[options]
packages = find:
install_requires =
    cblind>=2.2.2
    inifix>=1.2.0
    licplot>=1.0.5
    loguru>=0.5.3
    matplotlib>=3.2.1
    numpy>=1.18.5
    packaging>=21.3
    rich>=10.13.0
    scikit-image>=0.18.1
    scipy>=1.6.1
python_requires = >=3.8

[options.entry_points]
console_scripts =
    nonos = nonos.main:main

[options.extras_require]
dev =
    cogapp>=3.3.0
    memory-profiler
    pytest>=6.1
    pytest-mpl>=0.15.1
minimal =
    cblind==2.2.2
    inifix==1.2.0
    licplot==1.0.5
    loguru>=0.5.3
    matplotlib==3.2.1
    numpy==1.18.5
    packaging==21.3
    rich==10.13.0
    scikit-image==0.18.1
    scipy==1.6.1
typecheck =
    mypy==0.931
    types-setuptools~=57.4.8

[options.package_data]
nonos =
    py.typed
    logo.txt
    nonos.mplstyle

[flake8]
exclude = *__init__.py
ignore = E203, E501, W503, E741
